Update page titles to reflect "ECOVIS Compliance Solution Hungary" branding

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Rólunk – ECOVIS Hungary</title>
+    <title>Rólunk – ECOVIS Compliance Solution Hungary</title>
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
