--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>ECOVIS Hungary – Kapcsolat</title>
+    <title>ECOVIS Compliance Solution Hungary – Kapcsolat</title>
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -111,7 +111,7 @@
             <div class="grid h-11 w-11 place-items-center rounded bg-brand-red text-white font-bold">E</div>
             <div class="leading-tight">
               <div class="text-xl font-extrabold tracking-tight text-text-strong">
-                ECOVIS <span class="font-light text-brand-graphite">HUNGARY</span>
+                ECOVIS Compliance Solution <span class="font-light text-brand-graphite">HUNGARY</span>
               </div>
               <div class="text-[10px] uppercase tracking-[0.18em] text-text-muted">
                 the lawyer • the tax adviser • the auditor • the accountant
@@ -406,7 +406,7 @@
               <div class="absolute inset-x-0 bottom-0 bg-white/85 backdrop-blur border-t border-stroke-light p-4">
                 <div class="flex flex-col gap-3 md:flex-row md:items-center md:justify-between">
                   <div class="text-sm font-semibold text-text-strong">
-                    ECOVIS Hungary – Iroda
+                    ECOVIS Compliance Solution Hungary – Iroda
                     <div class="mt-1 text-sm font-normal text-text-muted">Budapest, Hollán Ernő u. 31, 1136</div>
                   </div>
                   <a
