--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Szolgáltatásaink – ECOVIS Hungary</title>
+    <title>Szolgáltatásaink – ECOVIS Compliance Solution Hungary</title>
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -134,7 +134,7 @@
             <div class="grid h-11 w-11 place-items-center rounded bg-brand-red text-white font-bold">E</div>
             <div class="leading-tight">
               <div class="text-xl font-extrabold tracking-tight text-text-strong">
-                ECOVIS <span class="font-light text-brand-graphite">HUNGARY</span>
+                ECOVIS Compliance Solution <span class="font-light text-brand-graphite">HUNGARY</span>
               </div>
               <div class="text-[10px] uppercase tracking-[0.18em] text-text-muted">
                 the lawyer • the tax adviser • the auditor • the accountant
