Update HTML meta tags and titles for SEO optimization across multiple pages

--- a/about.html
+++ b/about.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Rólunk – ECOVIS Compliance Solution Hungary</title>
+    <title>Rólunk - ECOVIS Compliance Solution Hungary | Nemzetközi Háttér, Helyi Fókusz</title>
+    <meta name="description" content="Ismerje meg az ECOVIS Compliance Solution Hungary-t - több mint 90 országban működő nemzetközi tanácsadói hálózat magyarországi tagja. Személyes jelenlét és szakmai fegyelem nemzetközi tudásbázissal." />
+    <meta name="keywords" content="ECOVIS rólunk, cégtörténet, nemzetközi hálózat, tanácsadói csapat, magyarországi iroda, ECOVIS history" />
+    <meta name="author" content="ECOVIS Compliance Solution Hungary" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rólunk - ECOVIS Compliance Solution Hungary" />
+    <meta property="og:description" content="Nemzetközi háttér, helyi fókusz - ECOVIS hálózat több mint 90 országban, Magyarországon személyes jelenléttel és szakértelemmel." />
+    <meta property="og:locale" content="hu_HU" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Rólunk - ECOVIS Compliance Solution Hungary" />
+    <meta name="twitter:description" content="Nemzetközi tanácsadói hálózat magyarországi szakértői - több évtizedes tapasztalat, globális tudásbázis." />
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
