--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>ECOVIS Compliance Solution Hungary – Kapcsolat</title>
+    <title>Kapcsolat - ECOVIS Compliance Solution Hungary | Elérhetőségek és Nyitvatartás</title>
+    <meta name="description" content="Lépjen kapcsolatba az ECOVIS Compliance Solution Hungary-val. Elérhetőségek, nyitvatartás, irodacím és praktikus információk. Jogi, adózási és számviteli tanácsadás Magyarországon." />
+    <meta name="keywords" content="ECOVIS kapcsolat, elérhetőség, telefonszám, email, iroda, cím, nyitvatartás, tanácsadás magyarország" />
+    <meta name="author" content="ECOVIS Compliance Solution Hungary" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kapcsolat - ECOVIS Compliance Solution Hungary" />
+    <meta property="og:description" content="Elérhetőségek, nyitvatartás és praktikus információk - lépjen kapcsolatba szakértőinkkel." />
+    <meta property="og:locale" content="hu_HU" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Kapcsolat - ECOVIS Hungary" />
+    <meta name="twitter:description" content="Vegye fel velünk a kapcsolatot - elérhetőségek, nyitvatartás és útmutató a megfelelő szakértő megtalálásához." />
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
