--- a/experts.html
+++ b/experts.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Szakértőink – ECOVIS Compliance Solution Hungary</title>
+    <title>Szakértőink - ECOVIS Compliance Solution Hungary | Tapasztalt Tanácsadók</title>
+    <meta name="description" content="Ismerje meg az ECOVIS Compliance Solution Hungary szakértői csapatát. Több évtizedes tapasztalattal rendelkező kollégák jogi, adózási, könyvvizsgálati és számviteli területen." />
+    <meta name="keywords" content="ECOVIS szakértők, tanácsadók, ügyvédek, adótanácsadók, könyvvizsgálók, számviteli szakértők, csapat, tapasztalat" />
+    <meta name="author" content="ECOVIS Compliance Solution Hungary" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Szakértőink - ECOVIS Compliance Solution Hungary" />
+    <meta property="og:description" content="Több évtizedes tapasztalattal rendelkező szakértői csapat jogi, adózási, könyvvizsgálati és számviteli területen." />
+    <meta property="og:locale" content="hu_HU" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Szakértőink - ECOVIS Hungary" />
+    <meta name="twitter:description" content="Tapasztalt szakértők tiszta megoldásokkal, vállalható határidőkkel és auditképes működéssel." />
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
