--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>ECOVIS Compliance Solution Hungary</title>
+    <title>ECOVIS Compliance Solution Hungary - Nemzetközi Jogi és Adótanácsadás</title>
+    <meta name="description" content="Az ECOVIS Compliance Solution Hungary komplex jogi, adózási, könyvvizsgálati és számviteli megoldásokat nyújt nemzetközi háttérrel. Több mint 90 országban működő globális tanácsadói hálózat." />
+    <meta name="keywords" content="ECOVIS, tanácsadás, jogi tanácsadás, adótanácsadás, könyvvizsgálat, számvitel, magyarország, nemzetközi tanácsadás, compliance" />
+    <meta name="author" content="ECOVIS Compliance Solution Hungary" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="ECOVIS Compliance Solution Hungary - Nemzetközi Tanácsadás" />
+    <meta property="og:description" content="Komplex jogi, adózási és számviteli megoldások nemzetközi háttérrel. Globális ECOVIS hálózat tagja." />
+    <meta property="og:locale" content="hu_HU" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ECOVIS Compliance Solution Hungary" />
+    <meta name="twitter:description" content="Komplex tanácsadási megoldások nemzetközi háttérrel - jogi, adózási, könyvvizsgálati és számviteli szolgáltatások." />
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
