--- a/services.html
+++ b/services.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Szolgáltatásaink – ECOVIS Compliance Solution Hungary</title>
+    <title>Szolgáltatások - ECOVIS Compliance Solution Hungary | Jogi, Adózási, Könyvvizsgálati Tanácsadás</title>
+    <meta name="description" content="Az ECOVIS Compliance Solution Hungary komplex tanácsadási portfóliója: jogi tanácsadás, adótanácsadás, könyvvizsgálat és számviteli szolgáltatások. Egységes szemlélet és következetes minőség." />
+    <meta name="keywords" content="jogi tanácsadás, adótanácsadás, könyvvizsgálat, számviteli szolgáltatások, társasági jog, ingatlanügyletek, GDPR, adóoptimalizálás, pénzügyi kimutatások" />
+    <meta name="author" content="ECOVIS Compliance Solution Hungary" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Szolgáltatások - ECOVIS Compliance Solution Hungary" />
+    <meta property="og:description" content="Komplex tanácsadási szolgáltatások jogi, adózási, számviteli és könyvvizsgálati területeken. Hazai és nemzetközi támogatás." />
+    <meta property="og:locale" content="hu_HU" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Szolgáltatások - ECOVIS Hungary" />
+    <meta name="twitter:description" content="Jogi, adózási, könyvvizsgálati és számviteli szakértelem egy helyen - egységes szemlélet, következetes minőség." />
 
     <!-- Corporate typography (Style guide: Noto Sans / Noto Serif) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
