Update header text to remove "Testing Pipeline" in index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="grid h-11 w-11 place-items-center rounded bg-brand-red text-white font-bold">E</div>
             <div class="leading-tight">
               <div class="text-xl font-extrabold tracking-tight text-text-strong">
-                ECOVIS Compliance Solution Testing Pipeline <span class="font-light text-brand-graphite">HUNGARY</span>
+                ECOVIS Compliance Solution <span class="font-light text-brand-graphite">HUNGARY</span>
               </div>
               <div class="text-[10px] uppercase tracking-[0.18em] text-text-muted">
                 the lawyer • the tax adviser • the auditor • the accountant
