Update contact information in contact.html and en/contact.html

--- a/en/contact.html
+++ b/en/contact.html
@@ -218,7 +218,7 @@
                     </div>
                     <div>
                       <div class="text-[10px] font-bold uppercase tracking-[0.18em] text-text-muted">Address</div>
-                      <div class="mt-2 text-sm font-extrabold text-text-strong">1022 Budapest, Bimbó út 7.</div>
+                      <div class="mt-2 text-sm font-extrabold text-text-strong">1136 Budapest Hollán Ernő utca 31 fszt 3.</div>
                       <div class="mt-2 text-sm text-text-muted">In-person meetings are recommended by appointment.</div>
                     </div>
                   </div>
@@ -232,7 +232,7 @@
                     </div>
                     <div>
                       <div class="text-[10px] font-bold uppercase tracking-[0.18em] text-text-muted">Phone</div>
-                      <div class="mt-2 text-sm font-extrabold text-text-strong">+36 1 439 1166</div>
+                      <div class="mt-2 text-sm font-extrabold text-text-strong">+36 30 731 3145</div>
                       <div class="mt-2 text-sm text-text-muted">Central contact number.</div>
                     </div>
                   </div>
@@ -246,7 +246,7 @@
                     </div>
                     <div>
                       <div class="text-[10px] font-bold uppercase tracking-[0.18em] text-text-muted">Email</div>
-                      <div class="mt-2 text-sm font-extrabold text-text-strong">info@ecovis.hu</div>
+                      <div class="mt-2 text-sm font-extrabold text-text-strong">info@ecovis-accounting.hu</div>
                       <div class="mt-2 text-sm text-text-muted">Please briefly describe the type of matter.</div>
                     </div>
                   </div>
