--- a/experts.html
+++ b/experts.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="ECOVIS szakértők, tanácsadók, ügyvédek, adótanácsadók, könyvvizsgálók, számviteli szakértők, csapat, tapasztalat" />
     <meta name="author" content="ECOVIS Compliance Solution Hungary" />
     <meta name="robots" content="index, follow" />
+    <link rel="shortcut icon" href="./images/only_logo.png" type="image/x-icon">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -156,7 +157,7 @@
       <div class="mx-auto max-w-7xl px-4 py-5 flex items-center justify-between gap-6">
         <!-- Brand -->
         <a class="flex items-center gap-3 min-w-0" href="#">
-          <div class="h-11 w-11 rounded bg-brand-red text-white grid place-items-center font-extrabold text-xl">E</div>
+          <img src="./images/only_logo_red.png" class="h-11 w-11 rounded">
           <div class="min-w-0">
             <div class="text-lg sm:text-xl font-extrabold tracking-tight uppercase leading-none">
               ECOVIS Compliance Solution <span class="font-light">HUNGARY</span>
