--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="ECOVIS kapcsolat, elérhetőség, telefonszám, email, iroda, cím, nyitvatartás, tanácsadás magyarország" />
     <meta name="author" content="ECOVIS Compliance Solution Hungary" />
     <meta name="robots" content="index, follow" />
+    <link rel="shortcut icon" href="./images/only_logo.png" type="image/x-icon">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -123,7 +124,7 @@
       <div class="mx-auto max-w-7xl px-4 py-5">
         <div class="flex items-center justify-between gap-6">
           <a href="#" class="group flex items-center gap-4">
-            <div class="grid h-11 w-11 place-items-center rounded bg-brand-red text-white font-bold">E</div>
+            <img src="./images/only_logo_red.png" class="grid h-11 w-11 place-items-center rounded "></img>
             <div class="leading-tight">
               <div class="text-xl font-extrabold tracking-tight text-text-strong">
                 ECOVIS Compliance Solution <span class="font-light text-brand-graphite">HUNGARY</span>
@@ -135,10 +136,10 @@
           </a>
 
           <nav class="hidden lg:flex items-center gap-8 text-sm font-semibold text-text-body">
+            <a class="hover:text-brand-red" href="/">Főoldal</a>
             <a class="hover:text-brand-red" href="/about.html">Rólunk</a>
             <a class="hover:text-brand-red" href="/services.html">Szolgáltatásaink</a>
             <a class="hover:text-brand-red" href="/experts.html">Szakértőink</a>
-            <a class="text-brand-red" href="/contact.html" aria-current="page">Kapcsolat</a>
           </nav>
 
           <button
