--- a/en/services.html
+++ b/en/services.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="legal advisory, tax advisory, audit, accounting services, corporate law, real estate transactions, GDPR, tax optimization, financial statements" />
     <meta name="author" content="ECOVIS Compliance Solution Hungary" />
     <meta name="robots" content="index, follow" />
+    <link rel="shortcut icon" href="../images/only_logo.png" type="image/x-icon">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -145,7 +146,7 @@
     <header class="sticky top-0 z-50 border-b border-stroke-light bg-white/90 backdrop-blur">
       <div class="mx-auto max-w-7xl px-4 py-5">
         <div class="flex items-center justify-between gap-6">
-          <a href="index.html" class="group flex items-center gap-4">
+          <a img src="../images/only_logo_red.png" class="grid h-11 w-11 place-items-center rounded "></img
             <div class="grid h-11 w-11 place-items-center rounded bg-brand-red text-white font-bold">E</div>
             <div class="leading-tight">
               <div class="text-xl font-extrabold tracking-tight text-text-strong">
