--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
     <header class="sticky top-0 z-50 border-b border-stroke-light bg-white/90 backdrop-blur">
       <div class="mx-auto max-w-7xl px-4 py-5">
         <div class="flex items-center justify-between gap-6">
-          <a href="#" class="group flex items-center gap-4">
+          <a href="./index.html" class="group flex items-center gap-4">
             <img src="./images/only_logo_red.png" class="grid h-11 w-11 place-items-center rounded "></img>
             <div class="leading-tight">
               <div class="text-xl font-extrabold tracking-tight text-text-strong">
